# picksnipe

./: .gitignore  functions.py  pyproject.toml  requirements.txt  test_model.py  test_notebook.ipynb
src/: functions.py  main.py
