[project]
name = "picksnipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "icecream>=2.1.8",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "nba-api>=1.10.2",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pydantic>=2.12.3",
    "pylint>=4.0.2",
    "pylint-pydantic>=0.4.1",
    "streamlit>=1.51.0",
    "streamlit-searchbox>=0.1.23",
    "types-requests>=2.32.4.20250913",
    "plotly==6.3.1",
]
